[gd_scene load_steps=20 format=3 uid="uid://ds6tba53kruv4"]

[ext_resource type="Theme" uid="uid://crsd6qx2yqvr7" path="res://new_theme.tres" id="1_i4qe1"]
[ext_resource type="Script" path="res://game.gd" id="2_xtvks"]
[ext_resource type="Texture2D" uid="uid://rw2rdwatpvju" path="res://Icons/energy_total_half.png" id="3_i13oa"]
[ext_resource type="Texture2D" uid="uid://drkglw8a4scbq" path="res://CityArt/seattle.jpg" id="3_mj4ot"]
[ext_resource type="Texture2D" uid="uid://raqau1585wb6" path="res://Icons/energy_production_half.png" id="4_a5sh3"]
[ext_resource type="Texture2D" uid="uid://v13hboihu10e" path="res://Icons/green_total_half.png" id="5_1glsq"]
[ext_resource type="Texture2D" uid="uid://b00yifud4pr8i" path="res://Icons/green_production_half.png" id="6_nvmdt"]
[ext_resource type="Texture2D" uid="uid://tr0g4xp6mw04" path="res://Icons/water_total_half.png" id="7_d730a"]
[ext_resource type="Texture2D" uid="uid://b8hpayh720pvi" path="res://Icons/water_production_half.png" id="8_q8qn0"]
[ext_resource type="Script" path="res://hand.gd" id="9_tigp4"]
[ext_resource type="PackedScene" uid="uid://n8hkxfm0e8go" path="res://card.tscn" id="10_njkof"]
[ext_resource type="Script" path="res://camera.gd" id="11_ndy6m"]
[ext_resource type="AudioStream" uid="uid://dk4xmeownqld4" path="res://Sounds/vine-boom.ogg" id="12_1vfxt"]
[ext_resource type="PackedScene" uid="uid://brrgw8fnx18rd" path="res://button_sound.tscn" id="13_p1c3t"]
[ext_resource type="AudioStream" uid="uid://b07hrsmy2v0y" path="res://Sounds/434472__dersuperanton__taking-card.wav" id="14_cmhyr"]
[ext_resource type="Texture2D" uid="uid://4dg6lh4ulmy0" path="res://Characters/seattle.png" id="16_ktuu6"]
[ext_resource type="AudioStream" uid="uid://1b4yhw5851wn" path="res://Sounds/Victory.wav" id="16_uv1st"]
[ext_resource type="Texture2D" uid="uid://tcha4vnx20hp" path="res://Icons/TextBubbleThick.png" id="18_pwxx0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qe6lt"]
bg_color = Color(0.686275, 0.870588, 0.968627, 1)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_i4qe1")
script = ExtResource("2_xtvks")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -146.0
offset_right = 307.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.48, 0.3552, 0.3552, 1)

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mj4ot")
expand_mode = 5
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 64.0
offset_right = 467.0
offset_bottom = 443.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qe6lt")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Stats" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/Stats"]
layout_mode = 2
columns = 2

[node name="TurnLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Turn: 12"

[node name="CardPlayedLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Card Plays: 12"

[node name="LevelLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Level: 0"

[node name="TargetLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Target Green: 0"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/Stats"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="PanelContainer/MarginContainer/Stats"]
layout_mode = 2
size_flags_vertical = 4
columns = 4

[node name="EnergyIcon" type="TextureRect" parent="PanelContainer/MarginContainer/Stats/Grid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("3_i13oa")
stretch_mode = 2

[node name="EnergyLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "10
"

[node name="EnergyProdIcon" type="TextureRect" parent="PanelContainer/MarginContainer/Stats/Grid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("4_a5sh3")

[node name="EnergyProdLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="GreenIcon" type="TextureRect" parent="PanelContainer/MarginContainer/Stats/Grid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("5_1glsq")

[node name="GreenLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="GreenProdIcon" type="TextureRect" parent="PanelContainer/MarginContainer/Stats/Grid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("6_nvmdt")

[node name="GreenProdLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="WaterIcon" type="TextureRect" parent="PanelContainer/MarginContainer/Stats/Grid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("7_d730a")

[node name="WaterLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="WaterProdIcon" type="TextureRect" parent="PanelContainer/MarginContainer/Stats/Grid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource("8_q8qn0")

[node name="WaterProdLabel" type="Label" parent="PanelContainer/MarginContainer/Stats/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "10"

[node name="Deck" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Hand" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(960, 810)
script = ExtResource("9_tigp4")

[node name="Discard" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="StartingHand" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="Card" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Costal Rains"
flavorText = "The coastal rains arrive like a symphony, painting the land in vibrant shades of green, nourishing life with their gentle touch, and energizing the world with their rhythmic dance."
green = 8
water = 9
energy = 6
type = 2

[node name="Card2" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Fir Tree"
flavorText = "Towering evergreen, a silent guardian of the forest, drinking from hidden springs, basking in the sun's embrace."
green = 8
water = 6
energy = 7

[node name="Card3" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Ground Squirrel"
flavorText = "Quick and nimble, the ground squirrel scampers through the earthy labyrinth, its keen senses tuned to the pulse of the land."
green = 5
water = 4
energy = 7
type = 1

[node name="Card4" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Snowy Breeze"
flavorText = "A whisper of winter, the snowy breeze blankets the landscape in a delicate embrace, painting the world in glistening white."
green = 2
water = 7
energy = 4
type = 2

[node name="Card5" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Sword Fern"
flavorText = "Amidst the forest floor, the sword fern stands as a resilient sentinel, its vibrant fronds slicing through the dappled sunlight."
green = 8
water = 6
energy = 7

[node name="Card7" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Summer Monsoon"
flavorText = "The Summer Monsoon arrives with thunderous applause, quenching the thirst of the land, and painting it in vibrant hues of green."
green = 8
water = 9
energy = 7
type = 2

[node name="Card8" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Orange Tree"
flavorText = "Under the sun's golden gaze, the Orange Tree bears the fruits of summer, a symbol of vitality and abundance in the orchard."
green = 7
water = 8
energy = 6

[node name="Card9" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Carolina Beaver"
flavorText = "In the Carolina rivers, the industrious beaver shapes its watery domain, weaving a tapestry of life with deft skill and determination."
green = 5
water = 8
energy = 7
type = 1

[node name="Card10" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Creeping Ivy"
flavorText = "Creeping Ivy, the silent conqueror of walls and fences, whispers tales of resilience as it thrives in the shadows."
green = 9
water = 7
energy = 6

[node name="Card6" parent="StartingHand" instance=ExtResource("10_njkof")]
position = Vector2(960, 810)
title = "Northern Flicker"
flavorText = "The Northern Flicker, a flash of golden wings in the dappled sunlight, sings the songs of the forest with its rhythmic drumming."
green = 5
water = 6
energy = 8

[node name="EndTurnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -32.0
offset_right = -76.0
offset_bottom = 39.0
grow_horizontal = 0
grow_vertical = 2
text = "End Turn"

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(960, 540)
script = ExtResource("11_ndy6m")

[node name="VineBoom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_1vfxt")
max_polyphony = 100

[node name="ButtonSound" parent="." instance=ExtResource("13_p1c3t")]

[node name="DrawSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_cmhyr")
volume_db = 10.0

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_uv1st")

[node name="Boss" type="Sprite2D" parent="."]
position = Vector2(1408, 278)
scale = Vector2(0.7, 0.7)
texture = ExtResource("16_ktuu6")

[node name="TextBubble" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1077, 178)
texture = ExtResource("18_pwxx0")

[node name="BossLabel" type="Label" parent="TextBubble"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -489.0
offset_top = -422.0
offset_right = -156.0
offset_bottom = -243.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme = ExtResource("1_i4qe1")
theme_override_font_sizes/font_size = 28
text = "I'm not just leaving footprints; I'm leaving toxic trails of destruction!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextTimer" type="Timer" parent="."]
wait_time = 45.0
autostart = true

[node name="WinMessage" type="MarginContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 600

[node name="PanelContainer" type="PanelContainer" parent="WinMessage"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WinMessage/PanelContainer"]
layout_mode = 2

[node name="WinLabel" type="Label" parent="WinMessage/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "You beat Seattle!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinButton" type="Button" parent="WinMessage/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Continue to Shop"

[connection signal="pressed" from="EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="pressed" from="WinMessage/PanelContainer/VBoxContainer/WinButton" to="." method="_on_win_button_pressed"]
